--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,12 @@ body{
 }
 
 .description{
-    color: #ff0000;
+    color: #ffffff;
 }
 
 /* Estilo para el botón */
 .button button {
-    background-color: #ff0000; /* Fondo amarillo */
+    background-color: #ffffff; /* Fondo amarillo */
     border: none; /* Sin bordes */
     padding: 10px 20px; /* Ajusta el relleno según tu preferencia */
     font-size: 18px; /* Tamaño de fuente */
